# gtaf

./: .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  ATOM_TAXONOMY.md  CONTRIBUTING.md  README.md  WHITEPAPAR.md
.github/: pull_request_template.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  docs-check.yml
docs/: CONSTRAINTS_PLAN.md  README.md  STYLE.md  WHITEPAPER.md  WRITE_READ_PIPELINES.md  contributing-guide.md  entity-deduplication-architecture.md
docs/_template/: adr-template.md  document.md
docs/adr/: ADR-001-append-only-persistence.md  ADR-002-single-writer-snapshot-readers.md  ADR-003-atom-representation-struct-enum.md  ADR-004-separate-entity-atom-reference-index.md  ADR-005-documentation-strategy.md  ADR-006-unified-cli.md  README.MD  README.md
docs/architecture/: README.md  entity-deduplication.md  write-read-pipelines.md
docs/design/: README.md  atom-node-design.md  atom-taxonomy.md  constraints-plan.md
docs/operations/: README.md
docs/specs/: README.md  cli-specification.md  gtaf-specification.md
scripts/: docs-check.sh
src/: CMakeLists.txt
src/cli/: main.cpp  types.h
src/cli/commands/: command_base.h  import_command.cpp  import_command.h  import_csv_command.cpp  import_csv_command.h  load_command.cpp  load_command.h  save_command.cpp  save_command.h  stats_command.cpp  stats_command.h
src/cli/executor/: executor.cpp  executor.h
src/cli/frontends/: argv.cpp  argv.h  repl.cpp  repl.h
src/cli/importer/: csv_importer.cpp  csv_importer.h
src/cli/parser/: parser.cpp  parser.h
src/cli/session/: session.h
src/core/: atom.h  atom_log.cpp  atom_log.h  atom_store.cpp  atom_store.h  edge.h  engine.cpp  engine.h  mutable_state.cpp  mutable_state.h  node.cpp  node.h  persistence.cpp  persistence.h  projection_engine.cpp  projection_engine.h  query_index.cpp  query_index.h  temporal_chunk.cpp  temporal_chunk.h
src/core/utility/: csv_importer.cpp  csv_importer.h
src/example/: gtaf_cli.cpp  history_example.cpp  import_workrequest.cpp  main.cpp  query_workrequest.cpp  query_workrequest_indexed.cpp
src/include/: atom_canonical.h  version.h.in
src/include/core/: atom.h  node.h
src/include/types/: values_helper.h
src/test/: performance_test.cpp  test_atom_log.cpp  test_atom_store.cpp  test_cli_parser.cpp  test_framework.h  test_main.cpp  test_node.cpp  test_persistence.cpp
src/test/tpch/: README_TPCH.md  setup_tpch.sh  tpch_import.cpp  tpch_import_fast.cpp  tpch_query.cpp
src/test/tpch/data/: region.tbl
src/types/: hash_utils.h  types.h  values_helper.h
src/windows/: gtaf_version.rc.in
